--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="main">
-    <img src="/front-end/product-preview-card-component-main/images/image-product-desktop.jpg" alt="">
+    <img src="image-product-desktop.jpg" alt="">
     <div class="info">
       <p class="heading">PERFUME</p>
     <h1>
@@ -33,7 +33,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Parvesh Rana</a>.
+      Coded by <a href="https://github.com/parvesh-rana">Parvesh Rana</a>.
     </div>
   </footer>
   
