--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     
   </p>
-    <button class="sv"><img src="/front-end/product-preview-card-component-main/images/icon-cart.svg" alt="">Add to Cart</button>
+    <button class="sv"><img src="icon-cart.svg" alt="">Add to Cart</button>
     </div>   
   </div>
   <footer>
